If "edge" is set to verge on unclassified, show with a small green verge (first commit of several).

--- a/resources/config-sve01.json
+++ b/resources/config-sve01.json
@@ -16,7 +16,7 @@
 		"compress": "gzip",
 		"metadata": {
 			"json": { "vector_layers": [
-						{ "id": "transportation",     "description": "transportation",     "fields": {"class":"String"}},
+						{ "id": "transportation",     "description": "transportation",     "fields": {"class":"String", "edge":"String"}},
 						{ "id": "waterway",     "description": "waterway",     "fields": {"class":"String"}},
 						{ "id": "building", "description": "building", "fields": {}}
 					] }
