Added coastline support. "sve_extract.sh" will now optionally merge new data into a copy of a set of existing coastline tiles. The helper script "update_vector.sh" assumes that these have the default name in the regulat data directory. "config-sve01.json" adds a "water" layer to the config used.

--- a/resources/config-sve01.json
+++ b/resources/config-sve01.json
@@ -1,5 +1,6 @@
 {
 	"layers": {
+		"water":       { "minzoom": 6,  "maxzoom": 14, "simplify_below": 12, "simplify_level": 0.0003, "simplify_ratio": 2 },
 		"place": { "minzoom": 5, "maxzoom": 14 },
 		"linearbarrier": { "minzoom": 13, "maxzoom": 14 },
 		"land1": { "minzoom": 5, "maxzoom": 14 },
