Updated schema config to reflect fields actually in use. Updated both the schema README and the scripts README.

--- a/resources/config-sve01.json
+++ b/resources/config-sve01.json
@@ -2,11 +2,11 @@
 	"layers": {
 		"water":       { "minzoom": 6,  "maxzoom": 14, "simplify_below": 12, "simplify_level": 0.0003, "simplify_ratio": 2 },
 		"place": { "minzoom": 0, "maxzoom": 14 },
-		"linearbarrier": { "minzoom": 13, "maxzoom": 14 },
+		"transportation": { "minzoom": 3, "maxzoom": 14, "simplify_below": 13, "simplify_level": 0.0001, "simplify_ratio": 2.0 },
 		"land1": { "minzoom": 5, "maxzoom": 14 },
 		"land2": { "minzoom": 5, "maxzoom": 14 },
 		"waterway": { "minzoom": 11, "maxzoom": 14 },
-		"transportation": { "minzoom": 3, "maxzoom": 14, "simplify_below": 13, "simplify_level": 0.0001, "simplify_ratio": 2.0 },
+		"linearbarrier": { "minzoom": 13, "maxzoom": 14 },
 		"building": { "minzoom": 14, "maxzoom": 14 },
 		"poi": { "minzoom": 12, "maxzoom": 14 }
 	},
@@ -17,13 +17,53 @@
 		"include_ids": false,
 		"name": "SVE01",
 		"version": "0.1",
-		"description": "SVE01 - based on Tilemaker example",
+		"description": "SVE01 - based on schema for web maps https://github.com/SomeoneElseOSM/SomeoneElse-style",
 		"compress": "gzip",
 		"metadata": {
 			"json": { "vector_layers": [
-						{ "id": "transportation",     "description": "transportation",     "fields": {"class":"String", "edge":"String"}},
-						{ "id": "waterway",     "description": "waterway",     "fields": {"class":"String"}},
-						{ "id": "building", "description": "building", "fields": {}}
+						{ "id": "water",     
+                                                  "description": "Background sea tiles",     
+                                                  "fields": { "class": "String" }},
+						{ "id": "place",     
+                                                  "description": "places",     
+                                                  "fields": { "class": "String", 
+                                                              "name":  "String" }},
+						{ "id": "transportation",     
+                                                  "description": "Linear transportation - road, rail, air and water",     
+                                                  "fields": { "class":   "String",
+                                                              "name":    "String", 
+                                                              "ref":     "String", 
+                                                              "ref_len": "Numeric", 
+                                                              "edge":    "String",
+                                                              "bridge":  "Boolean",
+                                                              "tunnel":  "Boolean", 
+                                                              "access":  "String", 
+                                                              "oneway":  "String" }},
+						{ "id": "land1",     
+                                                  "description": "Landuse etc. points and areas",     
+                                                  "fields": { "class": "String", 
+                                                              "name":  "String", 
+                                                              "ele":   "String" }},
+						{ "id": "land2",     
+                                                  "description": "Landuse etc. points and areas",     
+                                                  "fields": { "class": "String", 
+                                                              "name":  "String" }},
+						{ "id": "waterway",     
+                                                  "description": "Linear waterways",     
+                                                  "fields": { "class":  "String",
+                                                              "name":   "String",
+                                                              "bridge": "Boolean",
+                                                              "tunnel": "Boolean" }},
+						{ "id": "linearbarrier",     
+                                                  "description": "Linear non-transportation features, mostly barriers",     
+                                                  "fields": { "class": "String", 
+                                                              "name":  "String" }},
+						{ "id": "building", 
+                                                  "description": "building", 
+                                                  "fields": { "class":       "String",
+                                                              "name":        "String",
+                                                              "housenumber": "String",
+                                                              "housename":   "String" }}
 					] }
 		}
 	}
