--- a/resources/config-sve01.json
+++ b/resources/config-sve01.json
@@ -64,7 +64,8 @@
                                                               "name":        "String",
                                                               "housenumber": "String",
                                                               "housename":   "String" }}
-					] }
+					] },
+		    "attribution": "Map data &copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap contributors</a>"
 		}
 	}
 }
