Added `"high_resolution": true` it increase resolution of z14 tiles, as suggested by https://github.com/systemed/tilemaker/discussions/792#discussioncomment-11773710

--- a/resources/config-sve01.json
+++ b/resources/config-sve01.json
@@ -17,6 +17,7 @@
 		"include_ids": false,
 		"name": "SVE01",
 		"version": "0.1",
+		"high_resolution": true,
 		"description": "SVE01 - based on schema for web maps https://github.com/SomeoneElseOSM/SomeoneElse-style",
 		"compress": "gzip",
 		"metadata": {
